Fixed background image position on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -24,6 +24,36 @@
     }
 }
 
+@media (max-width: 1112px) {
+    body:before {
+        content: "";
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        background: url('pics/manWithGuitarBackround.jpg') no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+}
+
+@media (min-width: 1113px) {
+    body {
+        background-image: url('pics/manWithGuitarBackround.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+        background-attachment: fixed;
+    }
+    
+}
+
 @media (min-width: 577px) and (max-width: 991px) {
     p {
         font-size: 3.5vw;
@@ -52,6 +82,9 @@
     }
 }
 
+body {
+    color: white;
+}
 
 .row img {
     width: 75%;
@@ -101,15 +134,6 @@ p select {
     text-align: right;
 }
 
-body {
-    background-image: url('pics/manWithGuitarBackround.jpg');
-    min-height: 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    color: white;
-}
 
 nav {
     background-color: lightgray;
